adding tailwindcss, Vibra logo and fonts (Jost).

--- a/pages/caracteristicas/i18n.en.mdx
+++ b/pages/caracteristicas/i18n.en.mdx
@@ -4,9 +4,9 @@ import Callout from 'nextra-theme-docs/callout'
 
 <Callout emoji="⚠️">This feature is only available in the docs theme.</Callout>
 
-Nextra supports [Next.js Internationalized Routing](https://nextjs.org/docs/advanced-features/i18n-routing) out of the box.
+Vibra supports [Next.js Internationalized Routing](https://nextjs.org/docs/advanced-features/i18n-routing) out of the box.
 
-To add multi-language pages to your Nextra application, just need to config `i18n` in `next.config.js`:
+To add multi-language pages to your Vibra application, just need to config `i18n` in `next.config.js`:
 
 ```js
 // next.config.js
