--- a/pages/caracteristicas/image.es.mdx
+++ b/pages/caracteristicas/image.es.mdx
@@ -19,7 +19,7 @@ import Callout from 'nextra-theme-docs/callout'
   true`](/get-started#create-manually).
 </Callout>
 
-Nextra also supports automatic static image imports, you no longer need to specify the width and height of the image manually,
+Vibra also supports automatic static image imports, you no longer need to specify the width and height of the image manually,
 and you can directly use the Markdown syntax to display the same image:
 
 ```markdown
@@ -30,4 +30,4 @@ With Next.js Image, there will be no layout shift, and a beautiful blury placeho
 
 <br />
 
-![Nextra](../../public/og.png)
+![Vibra](../../public/og.png)
