--- a/pages/caracteristicas/mdx.es.mdx
+++ b/pages/caracteristicas/mdx.es.mdx
@@ -1,6 +1,6 @@
 # MDX
 
-With Nextra, all your `.md` and `.mdx` files under the pages directory will be rendered with [MDX](https://mdxjs.com/about), it's an
+With Vibra, all your `.md` and `.mdx` files under the pages directory will be rendered with [MDX](https://mdxjs.com/about), it's an
 advanced Markdown format with React component support.
 
 You can use import and use React components inside your Markdown files like this:
@@ -151,12 +151,12 @@ React components and Markdown can be **mixed together**, for instance:
 
 ```markdown
 > <Callout>
->   Give [**Nextra**](https://github.com/shuding/nextra) a star!
+>   Give [**Vibra**](https://github.com/vibrarealestate/vibra-ayuda) a star!
 > </Callout>
 ```
 
 Renders:
 
 > <Callout>
->   Give [**Nextra**](https://github.com/shuding/nextra) a star!
+>   Give [**Vibra**](https://github.com/vibrarealestate/vibra-ayuda) a star!
 > </Callout>
