--- a/pages/comenzar.es.mdx
+++ b/pages/comenzar.es.mdx
@@ -2,18 +2,18 @@
 
 ## Comienza con Vibra
 
-You can start by creating your own Nextra site and deploying to Vercel by clicking the link:
+You can start by creating your own Vibra site and deploying to Vercel by clicking the link:
 
 [![](https://vercel.com/button)](https://vercel.com/new/clone?demo-description=Markdown%20powered%20docs%20site.%20Built%20with%20Next.js.&demo-image=https%3A%2F%2Fnextra.vercel.app%2Fdemo.png&demo-title=Documentation%20Starter%20Kit&demo-url=https%3A%2F%2Fnextra.vercel.app%2F&project-name=nextjs-docs&repository-name=nextjs-docs&s=https%3A%2F%2Fgithub.com%2Fshuding%2Fnextra&from=templates)
 
-Vercel will create the Nextra repository and deploy the site for you with just a few clicks.
+Vercel will create the Vibra repository and deploy the site for you with just a few clicks.
 Once done, every change in the repository will be deployed automatically.
 
-## Crear manualmente
+## Crear una cuenta
 
-Nextra works like a Next.js plugin, and it accepts a theme config (layout) to render the page. To start:
+Vibra works like a Next.js plugin, and it accepts a theme config (layout) to render the page. To start:
 
-1. Install Next.js, Nextra and React: `yarn add next nextra react react-dom`
+1. Install Next.js, Vibra and React: `yarn add next nextra react react-dom`
 
 2. Install the docs theme (you can use any theme you like): `yarn add nextra-theme-docs`
 
@@ -24,7 +24,7 @@ Nextra works like a Next.js plugin, and it accepts a theme config (layout) to re
 const withNextra = require('nextra')({
   theme: 'nextra-theme-docs',
   themeConfig: './theme.config.js',
-  // optional: add `unstable_staticImage: true` to enable Nextra's auto image import
+  // optional: add `unstable_staticImage: true` to enable Vibra's auto image import
 })
 module.exports = withNextra()
 ```
@@ -80,7 +80,7 @@ import Callout from 'nextra-theme-docs/callout'
 ```jsx
 import 'nextra-theme-docs/style.css'
 
-export default function Nextra({ Component, pageProps }) {
+export default function Vibra({ Component, pageProps }) {
   return <Component {...pageProps} />
 }
 ```
@@ -93,8 +93,8 @@ export default function Nextra({ Component, pageProps }) {
 <Callout>
   Any `.md` or `.mdx` file will turn into a doc page and be displayed in
   sidebar. You can also create a `meta.json` file to customize the page order
-  and title. <br /> Check the source code: https://github.com/shuding/nextra for
-  more information.
+  and title. <br /> Check the source code:
+  https://github.com/vibrarealestate/vibra-ayuda for more information.
 </Callout>
 
 <Callout>
