--- a/pages/temas/docs/configuration.es.mdx
+++ b/pages/temas/docs/configuration.es.mdx
@@ -7,8 +7,8 @@ directory. The file looks something like this:
 ```ts
 export default {
   projectLink: 'https://gitlab.com/librewolf-community/browser',
-  titleSuffix: ' – Nextra',
-  footerText: `MIT ${new Date().getFullYear()} © Nextra.`,
+  titleSuffix: ' – Vibra',
+  footerText: `MIT ${new Date().getFullYear()} © Vibra.`,
   // ...
 }
 ```
@@ -18,7 +18,7 @@ export default {
 The URL that the button in the top right will point to.
 
 **Type:** `string`\
-**Default:** `https://github.com/shuding/nextra`
+**Default:** `https://github.com/vibrarealestate/vibra-ayuda`
 
 ## `projectLinkIcon`
 
@@ -42,14 +42,14 @@ export default {
 The base URL of the GitHub repository the docs are located in. This will be used for the `Edit this Page on GitHub` button.
 
 **Type:** `string`\
-**Default:** `https://github.com/shuding/nextra`
+**Default:** `https://github.com/vibrarealestate/vibra-ayuda`
 
 ## `titleSuffix`
 
 Suffix that will be added to page titles in the URL bar.
 
 **Type:** `string`\
-**Default:** `– Nextra`
+**Default:** `– Vibra`
 
 ## `nextLinks` and `prevLinks`
 
@@ -111,7 +111,7 @@ The text that is shown on the left of the footer.
 
 ```js
 export default {
-  footerText: `MIT ${new Date().getFullYear()} © Nextra.`,
+  footerText: `MIT ${new Date().getFullYear()} © Vibra.`,
 }
 ```
 
@@ -136,7 +136,7 @@ The logo in the top left.
 export default {
   logo: (
     <React.Fragment>
-      <span className="mr-2 font-extrabold hidden md:inline">Nextra</span>
+      <span className="mr-2 font-extrabold hidden md:inline">Vibra</span>
       <span className="text-gray-600 font-normal hidden md:inline">
         The Next Docs Builder
       </span>
@@ -161,12 +161,21 @@ export default {
       <meta name="theme-color" content="#ffffff" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta httpEquiv="Content-Language" content="en" />
-      <meta name="description" content="Nextra: the next docs builder" />
+      <meta
+        name="description"
+        content="Vibra: We made easy to find the home or your dreams"
+      />
       <meta name="twitter:card" content="summary_large_image" />
       <meta name="twitter:site" content="@shuding_" />
-      <meta property="og:title" content="Nextra: the next docs builder" />
-      <meta property="og:description" content="Nextra: the next docs builder" />
-      <meta name="apple-mobile-web-app-title" content="Nextra" />
+      <meta
+        property="og:title"
+        content="Vibra: We made easy to find the home or your dreams"
+      />
+      <meta
+        property="og:description"
+        content="Vibra: We made easy to find the home or your dreams"
+      />
+      <meta name="apple-mobile-web-app-title" content="Vibra" />
     </React.Fragment>
   ),
 }
