--- a/pages/index.en.mdx
+++ b/pages/index.en.mdx
@@ -1,11 +1,7 @@
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Vibra
+# Vibra Help
 
-**Vibra** is a [Next.js](https://nextjs.org) based static site generator.
+This is the help section of **Vibra.la**
 
-It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/comenzar#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
-
-Here's what you will get in 1 minute:
-
-<Bleed>![Vibra Example](../public/demo.png)</Bleed>
+<Bleed>![Vibra Landing](../public/images/vibra-landing.png)</Bleed>
