--- a/pages/index.es.mdx
+++ b/pages/index.es.mdx
@@ -1,11 +1,13 @@
 import Bleed from 'nextra-theme-docs/bleed'
 
-# Vibra
+# Ayuda Vibra
 
-En **Vibra** hacemos fácil encontrar el hogar de tus sueños.
+Esta es la sección de ayuda de **Vibra.la**
 
-It supports Markdown and React components ([MDX](/features/mdx)), automatically generated [sidebar and anchor links](/comenzar#sidebar-and-anchor-links), file-system based routing, built-in syntax highlighting, image optimization, custom layouts, i18n, and all the features you love about Next.js.
+## ¿Estás buscando hogar para compra o arriendo?.
 
-Here's what you will get in 1 minute:
+En **Vibra** encuentras fácilmente el hogar de tus sueños. Ya sea para compra o arriendo, en **Vibra** podrás encontrar una gran variedad de ofertas.
 
-<Bleed>![Vibra Example](../public/demo.png)</Bleed>
+## ¿Eres profesional del sector de bienes raíces?.
+
+En **Vibra** encuentras fácilmente el hogar de tus sueños. Ya sea para compra o arriendo, en **Vibra** podrás encontrar una gran variedad de ofertas.
