--- a/pages/comenzar.en.mdx
+++ b/pages/comenzar.en.mdx
@@ -2,9 +2,7 @@
 
 ## Quick Start with Vibra
 
-You can start by creating your own Vibra site and deploying to Vercel by clicking the link:
-
-[![](https://vercel.com/button)](https://vercel.com/new/clone?demo-description=Markdown%20powered%20docs%20site.%20Built%20with%20Next.js.&demo-image=https%3A%2F%2Fnextra.vercel.app%2Fdemo.png&demo-title=Documentation%20Starter%20Kit&demo-url=https%3A%2F%2Fnextra.vercel.app%2F&project-name=nextjs-docs&repository-name=nextjs-docs&s=https%3A%2F%2Fgithub.com%2Fshuding%2Fnextra&from=templates)
+You can start by searching a for homes or you can create an account to be able to save or access to your account
 
 Vercel will create the Vibra repository and deploy the site for you with just a few clicks.  
 Once done, every change in the repository will be deployed automatically.
